# attach_shelf

./: CMakeLists.txt  README.md  autoloc.md  package.xml  pub_init_pose.md  smooth_traj.md
config/: approach_service_server_node_lab.yaml  approach_service_server_node_sim.yaml  cart_pick_up_config_lab.yaml  cart_pick_up_config_sim.yaml  nav_cart_pick_up_config_lab.yaml  nav_cart_pick_up_config_sim.yaml
data/: cart_ranges_close.txt  cart_ranges_far.txt  cart_ranges_mid.txt  full_laser.txt  lab_ranges_and_intensities_loading_position_right_side.txt  lab_ranges_and_intensities_loading_position_wrong_side.txt  laser.txt  sim_ranges_and_intensities_loading_position.txt
include/attach_shelf/: tf_utils.hpp
launch/: approach_service.launch.py  attach_to_shelf.launch.py  attach_to_shelf_params.launch.py  cart_approach_test.launch.py  cart_pick_up_service.launch.py  dynamic_relative.launch.py  edges.launch.py  intensity.launch.py  midpoint.launch.py  poker.launch.py  pre_approach.launch.xml  pre_approach_v2.launch.py  relative.launch.py  scan_incidence.launch.py  unrolled.launch.py
rviz/: config.rviz  config_lab.rviz  config_sim.rviz  lab.rviz
src/: approach_service_server.cpp  cart_approach.cpp  cart_front_midpoint_test.cpp  cart_pick_up.cpp  intensity_poker.cpp  laser_scanner_poker.cpp  pre_approach.cpp  pre_approach_v2.cpp  reflective_plates_edges.cpp  scan_incidence_tf_test.cpp  static_publish_frames.cpp  tf_relative_to_laser.cpp  tf_relative_to_laser_dynamic.cpp  tf_utils.cpp  unrolled_tfs.cpp
srv/: PickUpCart.srv
